Fixed menu button styling on mobile.

--- a/static/style.css
+++ b/static/style.css
@@ -72,4 +72,8 @@ p {
         max-width: 72px;
         max-height: 72px;
     }
+
+    .menu {
+        display: block;
+    }
 }
